70512 - Add/open case - spinning wheel at top

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -56,7 +56,7 @@
     };
 
     window.caseLogsParameters = {
-        caseDetailsUrl: '@Url.Content("~/Case/Index")',
+        caseDetailsUrl: '@Url.Action("Index", "Case")',
         uploadLogFileUrl: '@Url.Action("UploadLogFile", "Case")',
         getLogFilesUrl: '@Url.Action("GetLogFiles", "Case")',
         deleteLogFileUrl: '@Url.Action("DeleteLogFile")',
