#65040 - Show warning message at same amount of registered tokens for Operation log

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/OperationLog/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/OperationLog/_Input.cshtml
@@ -489,17 +489,17 @@
                 },
                 "OperationLog.LogText": {
                     required: "@Translation.GetForJS("Du måste ange en beskrivning")",
-                    maxlength: "@Translation.GetForJS("Max chars number has been excedeed")"
+                    maxlength: "@Translation.GetForJS("Max antal tecken har överskridits")"
                 },
 
                 "OperationLog.LogAction": {
                     required: "@Translation.GetForJS("Du måste ange") @Translation.GetForJS("Åtgärd")",
-                    maxlength: "@Translation.GetForJS("Max chars number has been excedeed")"
+                    maxlength: "@Translation.GetForJS("Max antal tecken har överskridits")"
                 },
 
                 "OperationLog.LogTextExternal": {
                     required: "@Translation.GetForJS("Du måste ange") @Translation.GetForJS("Extern beskrivning")",
-                    maxlength: "@Translation.GetForJS("Max chars number has been excedeed")"
+                    maxlength: "@Translation.GetForJS("Max antal tecken har överskridits")"
                 }
             },
 
