#70535 - Locked case - Fields for lognotes are open

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
@@ -15,7 +15,7 @@
             <mbsc-listview-item *ngFor="let file of files;" icon="fa-paperclip">{{ file }}</mbsc-listview-item>
         </mbsc-listview>
     </div>
-    <log-files-upload [caseKey]="caseKey" (fileUploaded)="processFileUploaded($event)"></log-files-upload>
+    <log-files-upload *ngIf="hasFullAccess" [caseKey]="caseKey" (fileUploaded)="processFileUploaded($event)"></log-files-upload>
   </ng-container>
 
 </ng-container>
