--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
@@ -1,5 +1,5 @@
 
-<ng-container [formGroup]="form" *ngIf="isExternalLogFieldVisible || isInternalLogFieldVisible">
+<ng-container [formGroup]="form">
   
   <case-textarea-control *ngIf="isExternalLogFieldVisible" 
           [field]="externalLogField" 
@@ -8,7 +8,7 @@
   <case-textarea-control *ngIf="isInternalLogFieldVisible" 
           [field]="internalLogField" 
           [form]="form"></case-textarea-control>
-                   
+
   <ng-container *ngIf="isAttachedFilesVisible">
     <div id="log-files" *ngIf="files && files.length > 0">
         <mbsc-listview [options]="fileListSettings" class="fileListView">
