#68450 - Selfservice workflows issues fix;

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Content/css/selfservice.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Content/css/selfservice.css
@@ -1005,6 +1005,9 @@ a.error, input[type=¨button].error .btn
    float: right;
 }
 
+.no-left-padding { padding-left:0px!important}
+.caseControlPanel { padding-left: 15px!important; }
+
 .width100 {
     width: 100%!important;
 }
