--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_CaseControlPanel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_CaseControlPanel.cshtml
@@ -6,10 +6,10 @@
 
 <div class="jumbotron greybar">
     <div class="workflowStepsLoader" style="display: none"><i class="gif-loader"></i></div>
-    <div class="container-fluid" id="caseControlPanel@(prefix)" style="display: none">
-        <div class="row" style="margin-right: 0px !important;">
+    <div class="container-fluid " id="caseControlPanel@(prefix)" style="display: none">
+        <div>
             @* NOTE: UI is set up from workflowStepsBehavior.js *@
-            <div class="col-sm-1 pull-left save-button-div" style="display: none">
+            <div class="col-sm-1 pull-left save-button-div no-left-padding" style="display: none">
                 <input name="btnSave@(prefix)" type="button"
                        value="@Translation.Get("Save and Send")"
                        class="btn btn-default save-button"
