--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/date/case-date-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/date/case-date-control.component.html
@@ -2,4 +2,4 @@
 [error]="getErrorState()"
 [errorMessage]="getErrorMessage()"
 [ngClass]="{ 'disabled': formControl.disabled }">{{ formControl.label }}{{ requiredSymbol }}</mbsc-calendar>
-<!-- <mbsc-input #control [ngModel]="value | dateFormat" >{{ field.label }}</mbsc-input> -->
+<!-- <mbsc-input #control [ngModel]="value | dateFormat" >{{ fieldLabel }}</mbsc-input> -->
