--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/textarea/case-textarea-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/textarea/case-textarea-control.component.html
@@ -1,5 +1,5 @@
 <ng-container [formGroup]="form">
-    <mbsc-textarea #input [formControlName]="field.name"
+    <mbsc-textarea #input [formControlName]="field"
      [error]="getErrorState()"
      [errorMessage]="getErrorMessage()"
      [ngClass]="{ 'disabled': formControl.disabled }">{{ formControl.label }}{{ requiredSymbol }}</mbsc-textarea> 
