--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
@@ -5,14 +5,15 @@
       [field]="caseFieldsNames.Log_ExternalText" 
       [form]="form"></case-textarea-control>
 
-  <mbsc-switch [formControlName]="caseFieldsNames.Log_SendMailToNotifier">
+  <mbsc-switch *ngIf="isExternalLogFieldVisible" [formControlName]="caseFieldsNames.Log_SendMailToNotifier">
+     To:  
     <span class="mbsc-desc">{{ externalLogEmailsTo }}</span>
   </mbsc-switch>
 
   <lognote-email-input *ngIf="isExternalLogFieldVisible"
+      [disabled]="!isSendExternalEmailsChecked"
       [field]="caseFieldsNames.Log_ExternalEmailsCC"
-      [form]="form"></lognote-email-input>
-  
+      [form]="form"></lognote-email-input>  
   <!-- /Exnterl Log fields --> 
 
   <!-- Internal Log fields -->
