--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/search-input-base/search-input-base.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/search-input-base/search-input-base.component.html
@@ -3,7 +3,8 @@
   <div class="mbsc-row">
     <div class="mbsc-col-10">
       <mbsc-input id="{{ field }}" #searchInput
-           [ngClass]="{ 'searchInput': true, 'disabled': formControl.disabled }"
+           [disabled]="disabled"
+           [ngClass]="{ 'searchInput': true, 'disabled': disabled }"
            [formControlName]="field">{{ formControl.label }}{{ requiredSymbol }}</mbsc-input>
     </div>
     <div class="mbsc-col-2">
