#70584 - Log Note emails.

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
@@ -6,12 +6,11 @@
       [form]="form"></case-textarea-control>
 
   <mbsc-switch *ngIf="isExternalLogFieldVisible" [formControlName]="caseFieldsNames.Log_SendMailToNotifier">
-     To:  
+     {{ 'Till' | translate }}:
     <span class="mbsc-desc">{{ externalLogEmailsTo }}</span>
   </mbsc-switch>
 
   <lognote-email-input *ngIf="isExternalLogFieldVisible"
-      [disabled]="!isSendExternalEmailsChecked"
       [field]="caseFieldsNames.Log_ExternalEmailsCC"
       [form]="form"></lognote-email-input>  
   <!-- /Exnterl Log fields --> 
